# vapoursonic

./: .gitignore  README.md  pyproject.toml
.github/: nsis.ps1
.github/workflows/: build.yml
airsonic_desktop/: README.md  actions.py  albumArtLoader.py  config.py  main.py  mainwindow.ui  mpv.py  networkWorker.py  playbackController.py  playqueueview.py  ui_mainwindow.py  winhotkeys.py
src/: TODO
src/main/python/: albumArtLoader.py  albumArtViewer.py  config.py  main.py  networkWorker.py  playbackController.py  playqueueview.py  ui_mainwindow.py  vapoursonicActions.py  winhotkeys.py
src/main/python/vapoursonic/: albumArtLoader.py  albumArtViewer.py  config.py  main.py  networkWorker.py  playbackController.py  playqueueview.py  ui_mainwindow.py  vapoursonicActions.py  windowsIntegration.py
src/main/python/vapoursonic/widgets/: albumArtViewer.py  messagePopup.py  settingsPanel.py  ui_mainwindow.py
src/main/python/vapoursonic_pkg/: albumArtLoader.py  albumArtViewer.py  config.py  linuxIntegration.py  main.py  networkWorker.py  playQueueModel.py  playbackController.py  settingsPanel.py  ui_mainwindow.py  vapoursonicActions.py  windowsIntegration.py
src/main/python/vapoursonic_pkg/widgets/: aboutDialog.py  albumArtViewer.py  marqueeLabel.py  messagePopup.py  playQueueTabWidget.py  playqueueview.py  settingsPanel.py  trackProgressSlider.py  ui_mainwindow.py
src/main/resources/base/: mainwindow.ui  settings.ui
