[tool.poetry]
name = "airsonic-desktop"
version = "0.1.0"
description = ""
authors = ["***REMOVED*** ***REMOVED*** <***REMOVED***@***REMOVED***>"]

[tool.poetry.dependencies]
python = "^3.7"
py-sonic = "^0.7.6"
pyyaml = "^5.1"
pyqt5 = "^5.13"
pyqt5-stubs = "^5.13"
python-vlc = "^3.0"
python-mpv = "^0.4.5"
wheel = "^0.33.6"
keyboard = "^0.13.4"
pywin32-ctypes = "^0.2.0"
pyinstaller = "^3.5"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
